<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *  WordBook - An android application for those who aims to learn a new language.
 *  Copyright (C) 2021 A. Taha Baki
 *
 *  This file is part of WordBook.
 *
 *  WordBook is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  WordBook is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with WordBook.  If not, see <https://www.gnu.org/licenses/>.
 */
-->
<resources>
    <string name="app_name" translatable="false">@string/wordbook</string>
    <string name="wordbook">WordBook</string>
    <string name="by_author">by <b>@atahabaki</b></string>
    <string name="settings">Settings</string>
    <string name="buy_me_coffee">Buy me a coffee</string>
    <string name="feedback">Send feedback</string>
    <string name="search">Search</string>
    <string name="delete">Delete All</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort by</string>
    <string name="by_title">by Title</string>
    <string name="by_meaning">by Meaning</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="by_creation_date">by Date</string>
    <string name="by_favorite">by Favorite</string>
    <string name="show_all">Show All</string>
    <string name="show_only_fav">Show Only Favorites</string>
    <string name="show_only_not_fav">Show Only Not Favorites</string>
    <string name="type_word">Type the word…</string>
    <string name="type_meaning">Type the meaning…</string>
    <string name="save">Save</string>
    <string name="by_id">by ID</string>
    <string name="item_deleted">"%1$s" deleted.</string>
    <string name="undo">Undo</string>
    <string name="swipe_delete">Delete</string>
    <string name="swipe_favorite">(Un)Mark as Favorite</string>
    <string name="swipe_operations">Swipe Operations</string>
    <string name="swipe_left_to">Swipe from left to</string>
    <string name="swipe_right_to">Swipe from right to</string>
    <string name="item_invalid">Invalid entry!</string>
    <string name="ok">OK</string>
    <string name="title_missing">Title is missing…</string>
    <string name="meaning_missing">Meaning is missing…</string>
    <string name="title_meaning_missing">The title and the meaning are missing…</string>
    <string name="delete_everything">Delete everything?</string>
    <string name="sure_deleting_all">Everything will be deleted, and there\'s no way to undo this operation. Do you still want to do this?</string>
    <string name="cancel">Cancel</string>
    <string name="app_description">
        An &lt;a href="https://github.com/atahabaki/wordbook-android">
        open-source&lt;/a> easy to use android application for linguists by
        &lt;a href="https://bio.link/atahabaki">&lt;b>@atahabaki&lt;/b>&lt;/a>.
        &lt;br/>&lt;br/>
        &lt;b>LICENSE&lt;/b> can be
        found &lt;a href="https://github.com/atahabaki/wordbook-android/blob/dev/LICENSE">here&lt;/a>.
        &lt;br/>&lt;br/>
        You can get the &lt;b>source code&lt;/b> from
        &lt;a href="https://github.com/atahabaki/wordbook-android">here&lt;/a>.
        &lt;br/>&lt;br/>
        &lt;b>Copyright © 2021 A. Taha Baki&lt;/b>
    </string>
    <string name="app_full_name">WordBook: Personal Dictionary App</string>
    <string name="about">About</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="twitter_uri" translatable="false">https://twitter.com/atahabaki</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="instagram_uri" translatable="false">https://instagram.com/atahabaki</string>
    <string name="buymeacoffee" translatable="false">Buy me a coffee</string>
    <string name="buymeacoffee_uri" translatable="false">https://buymeacoff.ee/atahabaki</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="github_uri" translatable="false">https://github.com/atahabaki</string>
    <string name="reddit" translatable="false">Reddit</string>
    <string name="reddit_uri" translatable="false">https://reddit.com/u/atahabaki</string>
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="linkedin_uri" translatable="false">https://www.linkedin.com/in/atahabaki/</string>
    <string name="youtube" translatable="false">YouTube</string>
    <string name="youtube_uri" translatable="false">
        https://www.youtube.com/channel/UCOuCRtPG5Ou99B_nbmLyt4w</string>
    <string name="medium" translatable="false">Medium</string>
    <string name="medium_uri" translatable="false">https://atahabaki.medium.com/</string>
    <string name="discord" translatable="false">Discord</string>
    <string name="discord_uri" translatable="false">https://discord.com/invite/JDJqVF3uJg</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="telegram_uri" translatable="false">https://t.me/atahabakiClub</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_period">Repeat interval</string>
    <string name="notifications_period_helper">Determines when the next notification will be shown.</string>
    <string name="period_min_15">15 minutes</string>
    <string name="period_min_30">30 minutes</string>
    <string name="period_1_hour">1 hour</string>
    <string name="period_2_hours">2 hours</string>
    <string name="period_4_hours">4 hours</string>
    <string name="period_daily">Daily</string>
    <string name="reminder_channel_name">Random Entry Reminders</string>
    <string name="reminder_channel_desc">Reminds random entries...</string>
    <string-array name="swipe_operations">
        <item>@string/swipe_delete</item>
        <item>@string/swipe_favorite</item>
    </string-array>
    <string-array name="notifications_periods">
        <item>@string/period_min_15</item>
        <item>@string/period_min_30</item>
        <item>@string/period_1_hour</item>
        <item>@string/period_2_hours</item>
        <item>@string/period_4_hours</item>
        <item>@string/period_daily</item>
    </string-array>
</resources>
