<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *  WordBook - An android application for those who aims to learn a new language.
 *  Copyright (C) 2021 A. Taha Baki
 *
 *  This file is part of WordBook.
 *
 *  WordBook is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  WordBook is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with WordBook.  If not, see <https://www.gnu.org/licenses/>.
 */
-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:padding="16dp"
            android:hint="@string/type_word"
            android:background="@color/transparent"
            android:textColorHint="@color/negativeDefaultThemeColor"
            android:textColor="@color/negativeDefaultThemeColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_meaning"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/TextAppearance.AppCompat.Body2"
            android:padding="16dp"
            android:hint="@string/type_meaning"
            android:gravity="start"
            android:background="@color/transparent"
            android:textColorHint="@color/negativeDefaultThemeColor"
            android:textColor="@color/negativeDefaultThemeColor"
            app:layout_constraintTop_toBottomOf="@id/edit_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/edit_save_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>