<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 *  WordBook - An android application for those who aims to learn a new language.
 *  Copyright (C) 2021 A. Taha Baki
 *
 *  This file is part of WordBook.
 *
 *  WordBook is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  WordBook is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with WordBook.  If not, see <https://www.gnu.org/licenses/>.
 */
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SettingsFragment"
        android:padding="16dp">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_swipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/swipe_operations"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_swipe_to_right_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/swipe_right_to"
            app:layout_constraintTop_toBottomOf="@id/settings_swipe_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/settings_swipe_to_right_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/swipe_operations"
            android:spinnerMode="dropdown"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="@id/settings_swipe_to_right_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/settings_swipe_to_right_text"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/settings_swipe_to_left_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/swipe_left_to"
            app:layout_constraintTop_toBottomOf="@id/settings_swipe_to_right_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/settings_swipe_to_left_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/swipe_operations"
            android:spinnerMode="dropdown"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="@id/settings_swipe_to_left_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/settings_swipe_to_left_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>